added responsive design and improve the logics

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <script nomodule src="/build/mask-censored-text.js"></script>
   </head>
   <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <text-masking-component></text-masking-component>
   </body>
 </html>
