--- a/deployable/mask-censored-text/index.html
+++ b/deployable/mask-censored-text/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html dir="ltr" lang="en"><head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"> <title>Stencil Component Starter</title> <script type="module" src="mask-censored-text.esm.js" data-stencil></script> <script nomodule="" src="mask-censored-text.js" data-stencil></script> </head> <body> <text-masking-component></text-masking-component> <script>
+<!doctype html><html dir="ltr" lang="en"><head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"> <title>Mask Censored Text</title> <script type="module" src="mask-censored-text.esm.js" data-stencil></script> <script nomodule="" src="mask-censored-text.js" data-stencil></script> </head> <body> <text-masking-component></text-masking-component> <script>
 if ('serviceWorker' in navigator && location.protocol !== 'file:') {
   // auto-unregister service worker during dev mode
   navigator.serviceWorker.getRegistration().then(function(registration) {
